[gd_scene load_steps=6 format=3 uid="uid://c20sjieivuudf"]

[ext_resource type="PackedScene" uid="uid://cgaiiiewvrg7f" path="res://Scene/Element/app_window.tscn" id="1_fr7cb"]
[ext_resource type="Script" uid="uid://bpn4rh3vc453k" path="res://Resource/App/PirateDock/pirate_dock_window.gd" id="2_iou2v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fr7cb"]
bg_color = Color(0.680102, 0.959726, 0.344548, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iou2v"]
bg_color = Color(0.76459, 0.658334, 0.0975449, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agyhf"]
bg_color = Color(0.458796, 0.392725, 0.0489848, 1)

[node name="PirateDockWindow" instance=ExtResource("1_fr7cb")]
custom_minimum_size = Vector2(800, 469)
offset_right = -1120.0
offset_bottom = -611.0
script = ExtResource("2_iou2v")
max_size = Vector2(800, 469)
app_window_name = "pirate dock"

[node name="ColorRect" parent="MarginContainer/VBoxContainer/Body" index="0"]
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body" index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Select download link"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Virus rating"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer" index="1"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="EasyButton" type="Button" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer2" index="0"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_fr7cb")
theme_override_styles/hover = SubResource("StyleBoxFlat_iou2v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fr7cb")
theme_override_styles/normal = SubResource("StyleBoxFlat_agyhf")
text = "semag-ggi.moc"

[node name="Label2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "probably safe"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="NormalButton" type="Button" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer3" index="0"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_fr7cb")
theme_override_styles/hover = SubResource("StyleBoxFlat_iou2v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fr7cb")
theme_override_styles/normal = SubResource("StyleBoxFlat_agyhf")
text = "thebiratepay.net"

[node name="Label2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer3" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "about average"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/VBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HardButton" type="Button" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer4" index="0"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_fr7cb")
theme_override_styles/hover = SubResource("StyleBoxFlat_iou2v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fr7cb")
theme_override_styles/normal = SubResource("StyleBoxFlat_agyhf")
text = "sussysite.virus"

[node name="Label2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer4" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
text = "infested"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer2/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer3/NormalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Body/VBoxContainer/HBoxContainer4/HardButton" to="." method="_on_hard_button_pressed"]
